--- a/app/views/cd_admin/courses/index.html.haml
+++ b/app/views/cd_admin/courses/index.html.haml
@@ -34,18 +34,18 @@
         %td= cd_admin_course.number_of_students
         %td= cd_admin_course.tuition_fee
         %td
-          %img{src: "#{AppSettings.host}/#{cd_admin_course.cover_image}", width: 100, height: 50}
+          %img{src: "#{cd_admin_course.cover_image}", width: 100, height: 50}
         %td= cd_admin_course.category_id
         %td= cd_admin_course.views
         %td= cd_admin_course.status
         %td= cd_admin_course.rating_count
         %td= cd_admin_course.rating_points
         %td{style: "padding-top: 20px"}
-          - if cd_admin_course.status == 'rejected'
+          - if cd_admin_course.verification_status == 'rejected'
             %span.bg-danger.text-white.p-2= cd_admin_course.verification_status
-          - if cd_admin_course.status == 'approved'
+          - if cd_admin_course.verification_status == 'approved'
             %span.bg-success.text-white.p-2= cd_admin_course.verification_status
-          - if cd_admin_course.status == 'pending'
+          - if cd_admin_course.verification_status == 'pending'
             %span.bg-warning.text-white.p-2= cd_admin_course.verification_status
         %td= link_to 'Edit', edit_cd_admin_course_path(cd_admin_course), role: 'button', class: 'btn btn-primary'
 %br
