--- a/app/views/cd_admin/courses/_form.html.haml
+++ b/app/views/cd_admin/courses/_form.html.haml
@@ -40,7 +40,7 @@
         = f.number_field :views, class: 'form-control'
       .form-group
         = f.label :status
-        = f.number_field :status, class: 'form-control'
+        = f.select :status, Course::statuses.to_a.map{|x| [x[0], x[0]]}, {}, class: 'form-control'
       .form-group
         = f.label :rating_count
         = f.number_field :rating_count, class: 'form-control'
@@ -49,6 +49,6 @@
         = f.number_field :rating_points, class: 'form-control'
       .form-group
         = f.label :verification_status
-        = f.number_field :verification_status, class: 'form-control'
+        = f.select :verification_status, Course::verification_statuses.to_a.map{|x| [x[0], x[0]]}, {}, class: 'form-control'
       .form-group
         = f.submit 'Save', class: 'btn btn-primary'
