--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,17 +12,17 @@
   %body
     %nav.navbar.navbar-expand-lg.navbar-light.bg-light
       .container
-        %a.navbar-brand{:href => cd_admin_tutors_path}
+        %a.navbar-brand{:href => cd_admin_pages_path}
           %b Coursedy Admin
         %button.navbar-toggler{"aria-controls" => "navbarSupportedContent", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarSupportedContent", "data-toggle" => "collapse", :type => "button"}
           %span.navbar-toggler-icon
         #navbarSupportedContent.collapse.navbar-collapse
           %ul.navbar-nav.mr-auto
-            %li.nav-item.active
+            %li.nav-item
               %a.nav-link{:href => cd_admin_tutors_path}
                 Tutor List
             %li.nav-item
-              %a.nav-link{:href => '#'} Course List
+              %a.nav-link{:href => cd_admin_courses_path} Course List
           %ul.navbar-nav
             %li.nav-item.dropdown
               %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
