--- a/app/views/cd_admin/courses/show.html.haml
+++ b/app/views/cd_admin/courses/show.html.haml
@@ -54,6 +54,36 @@
       %div= lesson.description
       %hr
 
-= link_to 'Edit', edit_cd_admin_course_path(@cd_admin_course)
-\|
-= link_to 'Back', cd_admin_courses_path
+%p
+  %b Verification Status:
+  %span{style: 'color: #007bff; text-transform: capitalize; margin-left: 20px'}= @cd_admin_course.verification_status.upcase
+
+.row
+  .col-sm-2
+    = form_for [:cd_admin, @cd_admin_course] do |f|
+      .form-group.d-none
+        = f.label :status
+        = f.select :status, Course::verification_statuses.to_a.map{|x| [x[0], x[0]]}, {selected: Course::APPROVED}, class: 'form-control'
+      .actions
+        = f.submit 'Approve', class: 'btn btn-primary'
+  .col-sm-2
+    = form_for [:cd_admin, @cd_admin_tutor] do |f|
+      .form-group.d-none
+        = f.label :status
+        = f.select :status, Course::verification_statuses.to_a.map{|x| [x[0], x[0]]}, {selected: Course::REJECTED}, class: 'form-control'
+      .actions
+        = f.submit 'Reject', class: 'btn btn-danger'
+  .col-sm-2
+    = form_for [:cd_admin, @cd_admin_tutor] do |f|
+      .form-group.d-none
+        = f.label :status
+        = f.select :status, Course::verification_statuses.to_a.map{|x| [x[0], x[0]]}, {selected: Course::PENDING}, class: 'form-control'
+      .actions
+        = f.submit 'Reset', class: 'btn btn-warning'
+
+
+.row
+  .col-sm-12.mt-5.mb-5
+    = link_to 'Edit', edit_cd_admin_course_path(@cd_admin_course)
+    \|
+    = link_to 'Back', cd_admin_courses_path
