--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,70 @@
-<p><%= t(".hello", name: @email).capitalize %>!</p>
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <style>
+    /* Email styles need to be inline */
+    .mail-header {
+      max-width: 500px;
+      margin: 0 auto;
+    }
+    .mail-body {
+      background-color: #f5f5f5;
+      max-width: 500px;
+      margin: 20px auto;
+    }
+    .mail-footer {
+      color: #FFFFFF;
+      background-color: #424E55;
+      max-width: 500px;
+      margin: 5px auto;
+    }
+  </style>
+</head>
 
-<p><%= t '.confirm_link_msg' %> </p>
+<body>
+<div class="mail-header">
+  <a class="coursedy-logo">
+    <img src="https://res.cloudinary.com/coursedy/image/upload/v1539830644/logo_coursedy.png" width="200" height="40">
+  </a>
+</div>
+<div class="mail-body">
+  <div class="header">
+    <p><%= t(".welcome_message", name: @resource.name) %></p>
+    <% if @resource.role == 'teacher' %>
+        <p><%= t(".some_guides_message", action: t(".teacher_action")) %> </p>
+    <% else %>
+        <p><%= t(".some_guides_message", action: t(".student_action")) %> </p>
+    <% end %>
+  </div>
 
-<p><%= link_to t('.confirm_account_link'), confirmation_url(@resource, {confirmation_token: @token, config: message['client-config'].to_s, redirect_url: message['redirect-url']}).html_safe %></p>
+  <div class="validate_email">
+    <div><%= t(".ativation_guide_title")%></div>
+    <div><%= t(".ativation_guide_title")%></div>
+    <p><%= link_to t('.confirm_account_link'), confirmation_url(@resource, {confirmation_token: @token, config: message['client-config'].to_s, redirect_url: message['redirect-url']}).html_safe %></p>
+  </div>
+
+  <div class="complete_teacher_profile">
+    <div><%= t(".teacher_guide_title")%></div>
+    <div><%= t(".teacher_guide_message")%></div>
+    <a href="www.coursedy.com"><%=t('.teacher_guide_button')%></a>
+  </div>
+</div>
+<div class="mail-footer">
+  <span><%=t('.footer.question')%></span>
+  <div class="term-and-privacy">
+    <div><%=t('.footer.policy')%></div>
+    <div><%=t('.footer.term')%></div>
+  </div>
+  <div>
+    <span><%=t('.footer.connect_us')%></span>
+  </div>
+  <div class="social-network">
+    <a><img src="https://res.cloudinary.com/coursedy/image/upload/v1539872904/facebook_icon.png" width="20" height="20"></a>
+    <a><img src="https://res.cloudinary.com/coursedy/image/upload/v1539872904/Google-plus-circle-icon-png.png" width="20" height="20"></a>
+  </div>
+  <div>
+    <span><%=t('.footer.copyright')%></span>
+  </div>
+</div>
+</body>
+</html>
