--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,117 @@
-<p><%= t(:hello).capitalize %> <%= @resource.email %>!</p>
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <style>
+    /* Email styles need to be inline */
+    .mail-header {
+      max-width: 500px;
+      margin: 0 auto;
+    }
+    .mail-header .coursedy-logo {
+      margin-left: -20px;
+    }
+    .mail-body {
+      background-color: #f5f5f5;
+      max-width: 500px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+    .mail-footer {
+      color: #FFFFFF;
+      background-color: #424E55;
+      max-width: 500px;
+      margin: 0 auto;
+      padding: 10px 20px;
+      text-align: center;
+    }
+    a.active-link {
+      color: #FFFFFF;
+      text-decoration: none;
+      padding: 0 5px;
+    }
+    .validate_email, .complete_teacher_profile {
+      margin: 0 10px;
+    }
+    .reset-message {
+      text-align: center;
+      margin: 25px 10px;
+    }
+    .action-link {
+      text-align: center;
+      margin-top: 20px;
+      line-height: 40px;
+    }
+    .action-link a {
+      height: 40px;
+      min-width: 100px;
+      color: #ffffff;
+      font-weight: 600;
+      font-size: 14px;
+      transition: width 2s;
+      padding: 12px 40px;
+      outline: none;
+      background-color: #FF7F45;
+      border: none;
+      border-radius: 100px;
+      width: 200px;
+      text-decoration: none;
+    }
+    .action-link a:hover {
+      border: 1px solid #FF7F45;
+      color: #FF7F45;
+      background-color: transparent;
+    }
+    .border-left {
+      border-left: 1px solid #FFFFFF;
+    }
+    .connect-us {
+      margin: 12px 0 5px 0;
+    }
+    .copy-right {
+      margin: 10px 0 5px 0;
+    }
+  </style>
+</head>
 
-<p><%= t '.request_reset_link_msg' %></p>
+<body>
+<div class="mail-header">
+  <a class="coursedy-logo">
+    <img src="https://res.cloudinary.com/coursedy/image/upload/v1539830644/logo_coursedy.png" width="150" height="30">
+  </a>
+</div>
+<div class="mail-body">
+  <div class="header">
+    <p class="reset-message"><%= t(:hello).capitalize %> <%= @resource.email %>!</p>
+    <p class="reset-message"><%= t '.request_reset_link_msg' %></p>
+  </div>
 
-<p><%= link_to t('.password_change_link'), edit_password_url(@resource, reset_password_token: @token, config: message['client-config'].to_s, redirect_url: message['redirect-url'].to_s).html_safe %></p>
+  <div class="validate_email">
+    <p class="action-link"><%= link_to t('.password_change_link'), edit_password_url(@resource, reset_password_token: @token, config: message['client-config'].to_s, redirect_url: message['redirect-url'].to_s).html_safe %></p>
+  </div>
 
-<p><%= t '.ignore_mail_msg' %></p>
-<p><%= t '.no_changes_msg' %></p>
+  <div class="complete_teacher_profile">
+    <p><%= t '.ignore_mail_msg' %></p>
+    <p><%= t '.no_changes_msg' %></p>
+  </div>
+</div>
+<div class="mail-footer">
+  <div class="term-and-privacy">
+    <a class="active-link" href="www.coursedy.com/help"><%=t('.footer.question')%></a>
+    <a class="active-link border-left" href="www.coursedy.com/privacy"><%=t('.footer.policy')%></a>
+    <a class="active-link border-left" href="www.coursedy.com/term"><%=t('.footer.term')%></a>
+  </div>
+  <div class="connect-us">
+    <span><%=t('.footer.connect_us')%></span>
+  </div>
+  <div class="social-network">
+    <a href="https://www.facebook.com/Coursedy-180847969290072/?eid=ARCURchDiKGhVAHos36Yc4ZpElEG3ktOX1j1voilgomOeNSoFzlxfDLPiof7H4dDGyJ9DI-fTKnM7kG8">
+      <img src="https://res.cloudinary.com/coursedy/image/upload/v1539872904/facebook_icon.png" width="30" height="30">
+    </a>
+    <a><img src="https://res.cloudinary.com/coursedy/image/upload/v1539872904/Google-plus-circle-icon-png.png" width="30" height="30"></a>
+  </div>
+  <div class="copy-right">
+    <span><%=t('.footer.copyright')%></span>
+  </div>
+</div>
+</body>
+</html>
