removed default scope in Tutor. added lesson list into course serialization

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -7,7 +7,8 @@
       max-width: 500px;
       margin: 0 auto;
     }
-    .mail-header .coursedy-logo {
+
+    .coursedy-logo {
       margin-left: -20px;
     }
     .mail-body {
