--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -12,6 +12,10 @@
         background-color: #f5f5f5;
         max-width: 500px;
         margin: 20px auto;
+        border-radius: 3px;
+      }
+      .content-container {
+        padding: 30px 20px;
       }
       .mail-footer {
         color: #FFFFFF;
@@ -27,7 +31,9 @@
       <a class="coursedy-logo"><%= image_tag('logo_coursedy.png') %></a>
     </div>
     <div class="mail-body">
-      <%= yield %>
+      <div class="content-container">
+        <%= yield %>
+      </div>
     </div>
     <div class="mail-footer">
       <span>Copyright © 2018 Coursedy</span>
@@ -35,10 +41,10 @@
         <div>Quy định</div>
         <div>Chính sách bảo mật</div>
       </div>
-      <div class="social-network">
-        <a><%= image_tag('facebook.png') %></a>
-        <a><%= image_tag('google_plus.png') %></a>
-      </div>
+<!--      <div class="social-network">-->
+<!--        <a><%#= image_tag('facebook.png') %></a>-->
+<!--        <a><%#= image_tag('google_plus.png') %></a>-->
+<!--      </div>-->
     </div>
   </body>
 </html>
