--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -23,6 +23,10 @@
         max-width: 500px;
         margin: 5px auto;
       }
+
+      .footer-container {
+        padding: 20px 20px;
+      }
     </style>
   </head>
 
@@ -36,15 +40,13 @@
       </div>
     </div>
     <div class="mail-footer">
-      <span>Copyright © 2018 Coursedy</span>
-      <div class="term-and-privacy">
-        <div>Quy định</div>
-        <div>Chính sách bảo mật</div>
+      <div class="footer-container">
+        <span>Copyright © 2018 Coursedy</span>
+        <div class="term-and-privacy">
+          <div>Quy định</div>
+          <div>Chính sách bảo mật</div>
+        </div>
       </div>
-<!--      <div class="social-network">-->
-<!--        <a><%#= image_tag('facebook.png') %></a>-->
-<!--        <a><%#= image_tag('google_plus.png') %></a>-->
-<!--      </div>-->
     </div>
   </body>
 </html>
