--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,52 +1,124 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <style>
-      /* Email styles need to be inline */
-      .mail-header {
-        max-width: 500px;
-        margin: 0 auto;
-      }
-      .mail-body {
-        background-color: #f5f5f5;
-        max-width: 500px;
-        margin: 20px auto;
-        border-radius: 3px;
-      }
-      .content-container {
-        padding: 30px 20px;
-      }
-      .mail-footer {
-        color: #FFFFFF;
-        background-color: #364247;
-        max-width: 500px;
-        margin: 5px auto;
-      }
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <style>
+    /* Email styles need to be inline */
+    .mail-header {
+      max-width: 500px;
+      margin: 0 auto;
+    }
 
-      .footer-container {
-        padding: 20px 20px;
-      }
-    </style>
-  </head>
+    body{
+      font-family: harmonia-regular,sans-serif;
+      font-size: 13px;
+    }
 
-  <body>
-    <div class="mail-header">
-      <a class="coursedy-logo"><img src="<%= ActionController::Base.helpers.asset_path('logo_coursedy.png', host: AppSettings.asset_host) %>"/></a>
-    </div>
-    <div class="mail-body">
-      <div class="content-container">
-        <%= yield %>
-      </div>
-    </div>
-    <div class="mail-footer">
-      <div class="footer-container">
-        <span>Copyright © 2018 Coursedy</span>
-        <div class="term-and-privacy">
-          <div>Quy định</div>
-          <div>Chính sách bảo mật</div>
-        </div>
-      </div>
-    </div>
-  </body>
+    .coursedy-logo {
+      margin-left: -20px;
+    }
+    .mail-body {
+      background-color: #f5f5f5;
+      max-width: 500px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+    .mail-footer {
+      color: #FFFFFF;
+      background-color: #424E55;
+      max-width: 500px;
+      margin: 0 auto;
+      padding: 10px 20px;
+      text-align: center;
+    }
+    a.active-link {
+      color: #FFFFFF;
+      text-decoration: none;
+      padding: 0 5px;
+    }
+    .validate_email, .complete_teacher_profile {
+      margin: 0 10px;
+    }
+    .welcome-title {
+      font-size: 30px;
+      font-weight: 700;
+      margin: 10px 50px;
+      line-height: 37px;
+    }
+    .welcome-message {
+      text-align: center;
+      margin: 25px 10px;
+    }
+    .step-title {
+      color: #1CABA0;
+    }
+    .step-content {
+      padding-left: 10px;
+    }
+    .action-link {
+      text-align: center;
+      margin-top: 20px;
+      line-height: 40px;
+    }
+    .action-link a {
+      height: 40px;
+      min-width: 100px;
+      color: #ffffff;
+      font-weight: 600;
+      font-size: 14px;
+      transition: width 2s;
+      padding: 12px 40px;
+      outline: none;
+      background-color: #FF7F45;
+      border: none;
+      border-radius: 100px;
+      width: 200px;
+      text-decoration: none;
+    }
+    .action-link a:hover {
+      border: 1px solid #FF7F45;
+      color: #FF7F45;
+      background-color: transparent;
+    }
+    .border-left {
+      border-left: 1px solid #FFFFFF;
+    }
+    .connect-us {
+      margin: 12px 0 5px 0;
+    }
+    .copy-right {
+      margin: 10px 0 5px 0;
+    }
+  </style>
+</head>
+
+<body>
+<div class="mail-header">
+  <a class="coursedy-logo">
+    <img src="<%= ActionController::Base.helpers.asset_path('logo_coursedy.png', host: AppSettings.asset_host) %>" width="150" height="30"/>
+  </a>
+</div>
+<div class="mail-body">
+  <%= yield %>
+</div>
+<div class="mail-footer">
+  <div class="term-and-privacy">
+    <a class="active-link" href="https://coursedy.com/help"><%=t('devise.mailer.footer.question')%></a>
+    <a class="active-link border-left" href="https://coursedy.com/privacy"><%=t('devise.mailer.footer.policy')%></a>
+    <a class="active-link border-left" href="https://coursedy.com/terms"><%=t('devise.mailer.footer.term')%></a>
+  </div>
+  <div class="connect-us">
+    <span><%=t('devise.mailer.footer.connect_us')%></span>
+  </div>
+  <div class="social-network">
+    <a href="https://www.facebook.com/Coursedy-180847969290072/?eid=ARCURchDiKGhVAHos36Yc4ZpElEG3ktOX1j1voilgomOeNSoFzlxfDLPiof7H4dDGyJ9DI-fTKnM7kG8">
+      <img src="<%= ActionController::Base.helpers.asset_path('facebook_icon.png', host: AppSettings.asset_host) %>" width="30" height="30"/>
+    </a>
+    <a><img src="<%= ActionController::Base.helpers.asset_path('google_icon.png', host: AppSettings.asset_host) %>" width="30" height="30"></a>
+  </div>
+  <div class="copy-right">
+    <span><%=t('devise.mailer.footer.copyright')%></span>
+  </div>
+</div>
+</body>
 </html>
