--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,8 @@
     %script{:crossorigin => "anonymous", :integrity => "sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q", :src => "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"}
     %script{:crossorigin => "anonymous", :integrity => "sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl", :src => "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"}
     = stylesheet_link_tag "application", :media => "all"
+    = javascript_include_tag "application"
+
   %body
     %nav.navbar.navbar-expand-lg.navbar-light.bg-light
       .container
@@ -23,6 +25,8 @@
                 Tutor List
             %li.nav-item
               %a.nav-link{:href => cd_admin_courses_path} Course List
+            %li.nav-item
+              %a.nav-link{:href => cd_admin_categories_path} Category List
           %ul.navbar-nav
             %li.nav-item.dropdown
               %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
