--- a/app/views/cd_admin/duo/new.html.haml
+++ b/app/views/cd_admin/duo/new.html.haml
@@ -1,1 +1,1 @@
-%iframe#duo_iframe{data: {host: AppSettings.duo.host, 'sig-request': @sig_request, 'post-action': cd_admin_duo_verify_path}}
+%iframe#duo_iframe{data: {host: AppSettings.duo.host, 'sig-request': @sig_request, 'post-action': cd_admin_duo_verify_path}, width: 620, height: 400}
